--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -107,6 +107,7 @@ li.dropdown.last {
 #content-nav {
     margin-top: 0;
     height: 40px;
+    margin-bottom: 10px;
 //    background-color: #00447c;
 }
 #content-nav #wrapper {
