fix fade in/out timing, change search button color

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -195,7 +195,7 @@ li.dropdown.last {
     height: 55px;
     width: 1370px; /* was 900px */
     border: none;
-    color: grey;
+    color: #919191;
     border: 2px solid #fff;
     border-radius: 0px 5px 5px 0px;
     background-color: #E9EDF1;
