adjust dropdown list fonts

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -90,7 +90,9 @@ li.dropdown {
   margin-top: 15px;
   padding: 5px 25px 5px 25px;
   border-right: 2px solid #c3e6fb;
-  font-weight: 900;
+  font-weight: 600;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 1px;
 }
 
 li.dropdown.last {
