add background color to hamburger

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -399,7 +399,11 @@ li.dropdown.last {
     /*cursor: default !important;*/
 }
 
-
+.fa-bars {
+  background-color: #005fae;
+  padding: 20px;
+  margin: -16px -30px -16px -16px;
+}
 @media only screen and (max-width: 320px) {
 
 }
