--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -109,10 +109,21 @@ li.dropdown.last {
     margin-bottom: 10px;
 //    background-color: #00447c;
 }
-// #content-nav #wrapper {
-//     height: 40px;
-// }
+#content-nav #wrapper li {
+    padding-left: 0px;
+    border-bottom: 2px solid #c3e6fb;
+    margin: 5px 0px 5px 0px;
+    font-weight: bold;
+}
 
+.container-dropdown {
+  margin: 0px 40px 0px 50px;
+}
+
+.fa-chevron-down {
+  color: #005fae;
+  padding: 7px 0px 0px 0px;
+}
 #search-input {
   padding-top: 4px;
 }
@@ -122,7 +133,7 @@ li.dropdown.last {
 }
 #content-nav #wrapper ul {
     padding: 0;
-    margin: 0;
+    margin: 0px 0px 0px 0px;
     list-style: none;
     position: relative;
     display: inline-table;
@@ -401,6 +412,13 @@ li.dropdown.last {
   padding: 20px;
   margin: -16px -30px -16px -16px;
 }
+
+.glyphicon-search-mobile {
+  color: #fff !important;
+  padding: 0px 25px 0px 0px;
+  font-size: 25px !important;
+}
+
 @media only screen and (max-width: 320px) {
 
 }
