--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -570,6 +570,16 @@ li.dropdown.last {
   li.dropdown {
     border-right: none;
   }
+  .toolbar .navbar-collapse .navbar-nav li a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .toolbar ul li a {
+    transition: none;
+  }
+  .dropdown-menu {
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 410px) {
