--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -19,7 +19,6 @@
 .toolbar .quicktools {
     font-size: 16px;
     text-align: left;
-    padding-left: 15px;
 }
 .toolbar a.navbar-brand:hover {
     color: #003663;
@@ -418,6 +417,10 @@ li.dropdown.last {
   color: #fff !important;
   padding: 0px 28px 0px 0px;
   font-size: 25px !important;
+}
+
+.quicktools {
+    border-bottom: 2px solid #c3e6fb;
 }
 
 @media only screen and (max-width: 320px) {
