--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -242,7 +242,7 @@ li.dropdown.last {
    color: gray;
 }
 .button {border: 0px;}
-.container {width: 985px;}
+// .container {width: 985px;}
 .button {
     height: 35px;
     line-height: 35px;
@@ -572,6 +572,13 @@ li.dropdown.last {
   }
   li.dropdown {
     border-right: none;
+    border-bottom: 2px solid #c3e6fb;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: left;
+    margin-top: 0px;
+    line-height: 0px;
+    padding: 0px 0px 0px 0px;
   }
   .toolbar .navbar-collapse .navbar-nav li a {
     padding-top: 0px;
@@ -582,6 +589,9 @@ li.dropdown.last {
   }
   .dropdown-menu {
     font-size: 12px;
+  }
+  .glyphicon-search {
+    display: none;
   }
 }
 
