add chevron to mobile dropdown list only

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -460,6 +460,9 @@ li.dropdown.last {
     .container-dropdown {
       display: none;
     }
+    .chevron-pulldown {
+      display: none;
+    }
 }
 
 @media screen and (min-width: 992px) {
