--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -415,8 +415,9 @@ li.dropdown.last {
 
 .glyphicon-search-mobile {
   color: #fff !important;
-  padding: 0px 28px 0px 0px;
-  font-size: 25px !important;
+  padding: 0px 0px 0px 0px;
+  font-size: 20px !important;
+  margin-top: 19px;
 }
 
 .quicktools {
@@ -593,14 +594,14 @@ li.dropdown.last {
   .dropdown-menu {
     font-size: 12px;
   }
-  .glyphicon-search {
+  .search-desktop {
     display: none;
   }
 }
 
 @media screen and (max-width: 410px) {
   .mobile-logo {
-    height: 50px;
+    height: 45px;
   }
   .fa-bars {
       padding: 20px 25px 13px 14px;
