--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -513,7 +513,8 @@ li.dropdown.last {
   }
   .glyphicon-search {
     font-size: 23px;
-    top: 5px
+    top: 5px;
+    margin-right: 12px;
   }
   #content-nav #search-input .button {
     top: -50px;
