creates a new .scss file for President Messages

--- a/app/styles/main2016.scss
+++ b/app/styles/main2016.scss
@@ -14,6 +14,7 @@
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
 @import "ContentTypes/AdmissionsStyles";
+@import "ContentTypes/PresidentMessages";
 @import "ContentTypes/HighlightBox";
 @import "ContentTypes/CallsToAction";
 @import "ContentTypes/hero";
