creates scss for ExpertProfiles content Type

--- a/app/styles/main2016.scss
+++ b/app/styles/main2016.scss
@@ -17,6 +17,7 @@
 @import "ContentTypes/PresidentMessages";
 @import "ContentTypes/HighlightBox";
 @import "ContentTypes/CallsToAction";
+@import "ContentTypes/ExpertProfiles";
 @import "ContentTypes/hero";
 @import "ContentTypes/newsroom";
 @import "ContentTypes/panel";
