make navbar fixed instead of static; add cursors to mobile chevrons

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -424,6 +424,10 @@ li.dropdown.last {
     border-bottom: 2px solid #c3e6fb;
 }
 
+.chevron-pulldown {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 320px) {
 
 }
