change search field text color (not placeholder)

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -205,7 +205,7 @@ li.dropdown.last {
     height: 55px;
     width: 1640px; /* was 900px */
     border: none;
-    color: #919195;
+    color: #6E6E6E;
     border: 2px solid #fff;
     border-radius: 5px 5px 5px 5px;
     background-color: #fff;
