--- a/app/styles/ContentTypes/_footer.scss
+++ b/app/styles/ContentTypes/_footer.scss
@@ -2,7 +2,7 @@
     display: block;
     min-height: 20px;
     padding: 20px;
-    background: #003663;
+    background: #00447c;
     margin-left: 0;
     margin-right: 0;
 }
