updates header styles to new font

--- a/app/styles/ContentTypes/_stylestoimport.scss
+++ b/app/styles/ContentTypes/_stylestoimport.scss
@@ -128,7 +128,7 @@ body {
   cursor: pointer
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Open Sans, helvetica, arial, sans-serif
+  font-family: 'Raleway', Open Sans, helvetica, arial, sans-serif;
 }
 h1 {
   padding-left: .5em;
