--- a/app/styles/main2016.scss
+++ b/app/styles/main2016.scss
@@ -14,8 +14,10 @@
 @import "ContentTypes/navmenu";
 @import "ContentTypes/TableStyles";
 @import "ContentTypes/AdmissionsStyles";
+@import "ContentTypes/PresidentMessages";
 @import "ContentTypes/HighlightBox";
 @import "ContentTypes/CallsToAction";
+@import "ContentTypes/ExpertProfiles";
 @import "ContentTypes/hero";
 @import "ContentTypes/newsroom";
 @import "ContentTypes/panel";
