--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -1,7 +1,8 @@
 /* MainHeaderNavigation Styles */
+body {
+padding-top: 215px;
+}
 
-.navbar-header {
-  background: rgba(0, 68, 124, 1);
 .blue-header {
   background: #00447c;
 }
