--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -326,6 +326,7 @@ li.dropdown.last {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   letter-spacing: 2px;
+  float: right;
 }
 
 .msudenver_logo {
