Revert "adds new building structure"
This reverts commit 9f6bf041532c7efb92a357d9533fdb70a96010b3.

--- a/app/styles/ContentTypes/_footer.scss
+++ b/app/styles/ContentTypes/_footer.scss
@@ -2,7 +2,7 @@
     display: block;
     min-height: 20px;
     padding: 20px;
-    background: #00447c;
+    background: #003663;
     margin-left: 0;
     margin-right: 0;
 }
