--- a/app/styles/ContentTypes/_stylestoimport.scss
+++ b/app/styles/ContentTypes/_stylestoimport.scss
@@ -128,7 +128,7 @@ body {
   cursor: pointer
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', Open Sans, helvetica, arial, sans-serif;
+  font-family: Open Sans, helvetica, arial, sans-serif
 }
 h1 {
   padding-left: .5em;
@@ -168,6 +168,26 @@ h6 {
   color: #e74c3c;
   font-size: 13px;
   font-weight: 500
+}
+.siteheader {
+  margin-top: 55px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  padding:5px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  border-bottom: 2px solid #cc2951;
+}
+@media (max-width: 767px) {
+  .siteheader {
+    margin-top: 15px;
+    text-align: right;
+    padding-right: 10px;
+  }
 }
 
 .msudenver_logo img {
