--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -1,6 +1,6 @@
 /* MainHeaderNavigation Styles */
 body {
-padding-top: 215px;
+padding-top: 70px;
 }
 
 .blue-header {
@@ -432,77 +432,153 @@ li.dropdown.last {
   cursor: pointer;
 }
 
+
+  .navbar-header, .col-xs-9 {
+    padding-left: 0px;
+  }
+  li.dropdown {
+    border-right: none;
+    border-bottom: 2px solid #c3e6fb;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: left;
+    margin-top: 0px;
+    line-height: 0px;
+    padding: 0px 0px 0px 0px;
+  }
+  .toolbar .navbar-collapse .navbar-nav li a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .toolbar ul li a {
+    transition: none;
+  }
+  .dropdown-menu {
+    font-size: 12px;
+  }
+  .search-desktop {
+    display: none;
+  }
+
+
+
+
+
 @media only screen and (max-width: 320px) {
 
 }
 
-@media only screen and (min-width: 768px) {
-    .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
-        margin-bottom: -2px;
-    }
-    .navbar .navbar-nav > .quicktools {
-        display: inline-block;
-        float: none;
-        margin-bottom: -2px;
-    }
-    ul.dropdown-menu > li a {
-        padding-top: 0;
-    }
 
-    ul.nav.navbar-nav.navbar-center {
-        list-style: none !important;
-        margin: auto !important;
-        width: -webkit-fit-content;
-        width: -moz-fit-content;
-        width: fit-content;
-        float: none;
-        display: inline-block;
-    }
-    .navbar-collapse #wrapper {
-      display: none;
-    }
-    .glyphicon-search-mobile {
-      display: none;
-    }
-    .container-dropdown {
-      display: none;
-    }
-    .chevron-pulldown {
-      display: none;
-    }
+
+@media screen and (min-width: 410px) {
+  .mobile-logo {
+    height: 45px;
+  }
 }
+  .navbar-collapse {
+    border-top: 5px solid #005fae;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .apply-button {
+    display: none;
+  }
+
+  @media only screen and (min-width: 768px) {
+      .navbar .navbar-nav {
+          display: inline-block;
+          float: none;
+          margin-bottom: -2px;
+      }
+      .navbar .navbar-nav > .quicktools {
+          display: inline-block;
+          float: none;
+          margin-bottom: -2px;
+      }
+
+      li.dropdown {
+        font-size: 15px;
+      }
+      ul.dropdown-menu > li a {
+          padding-top: 0;
+      }
+
+      ul.nav.navbar-nav.navbar-center {
+          list-style: none !important;
+          margin: auto !important;
+          width: -webkit-fit-content;
+          width: -moz-fit-content;
+          width: fit-content;
+          float: none;
+          display: inline-block;
+      }
+      .navbar-collapse #wrapper {
+        display: none;
+      }
+      .glyphicon-search-mobile {
+        display: none;
+      }
+      .container-dropdown {
+        display: none;
+      }
+      .chevron-pulldown {
+        display: none;
+      }
+
+      body {
+      padding-top: 215px;
+      }
+  }
+
 
 @media screen and (min-width: 992px) {
-
-}
-@media only screen and (max-width:1200px){
-}
-
-
-@media only screen and (max-width:1600px) {
-  li.dropdown {
-    padding: 5px 5px 5px 5px;
-    font-size: 18px;
-  }
-  .apply-button {
-    font-size:24px;
-    border-radius: 0px 0px 10px 10px;
-    padding: 18px 13px 18px 13px;
-    width: 10%;
-    font-weight: 700;
-    letter-spacing: 2px;
-  }
   .msudenver_logo {
-    width: 60%;
+    display: none;
+  }
+  li.dropdown {
+    padding: 5px 0px 5px 0px;
+    font-size: 10px;
   }
   #content-nav #search-input input[type=text] {
-      width: 880px;
+      width: 490px;
+  }
+  #content-nav #search-input .button {
+    left: 420px;
+  }
+  #content-nav #nav-search-close {
+    left: 420px;
+  }
+  .mobile-logo {
+    height: 60px;
+    padding: 8px;
+  }
+  .apply-button {
+    width: 14%;
+    margin-bottom: 20px;
   }
 }
 
-@media only screen and (max-width:1358px) {
+@media only screen and (max-width:1100px) {
+  li.dropdown {
+    padding: 5px 3px 5px 3px;
+    font-size: 14px;
+  }
+  .apply-button {
+    font-size:22px;
+    font-weight: 600;
+  }
+  #content-nav #search-input input[type=text] {
+      width: 445px;
+  }
+}
+
+
+@media only screen and (min-width:1200px){
+}
+
+
+@media only screen and (min-width:1358px) {
   li.dropdown {
     font-size: 16px;
   }
@@ -535,84 +611,24 @@ li.dropdown.last {
   }
 }
 
-@media only screen and (max-width:1100px) {
+
+@media only screen and (min-width:1600px) {
   li.dropdown {
-    padding: 5px 3px 5px 3px;
-    font-size: 14px;
+    padding: 5px 5px 5px 5px;
+    font-size: 18px;
   }
   .apply-button {
-    font-size:22px;
-    font-weight: 600;
+    font-size:24px;
+    border-radius: 0px 0px 10px 10px;
+    padding: 18px 13px 18px 13px;
+    width: 10%;
+    font-weight: 700;
+    letter-spacing: 2px;
   }
-  #content-nav #search-input input[type=text] {
-      width: 445px;
-  }
-}
-
-@media screen and (max-width: 992px) {
   .msudenver_logo {
-    display: none;
-  }
-  li.dropdown {
-    padding: 5px 0px 5px 0px;
-    font-size: 11px;
+    width: 60%;
   }
   #content-nav #search-input input[type=text] {
-      width: 490px;
-  }
-  #content-nav #search-input .button {
-    left: 420px;
-  }
-  #content-nav #nav-search-close {
-    left: 420px;
-  }
-  .mobile-logo {
-    height: 60px;
-    padding: 8px;
-  }
-  .apply-button {
-    width: 14%;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .apply-button {
-    display: none;
-  }
-  .navbar-header, .col-xs-9 {
-    padding-left: 0px;
-  }
-  li.dropdown {
-    border-right: none;
-    border-bottom: 2px solid #c3e6fb;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: left;
-    margin-top: 0px;
-    line-height: 0px;
-    padding: 0px 0px 0px 0px;
-  }
-  .toolbar .navbar-collapse .navbar-nav li a {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-  .toolbar ul li a {
-    transition: none;
-  }
-  .dropdown-menu {
-    font-size: 12px;
-  }
-  .search-desktop {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 410px) {
-  .mobile-logo {
-    height: 45px;
-  }
-  .navbar-collapse {
-    border-top: 5px solid #005fae;
+      width: 880px;
   }
 }
