--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -106,6 +106,7 @@ li.dropdown {
   font-family: 'Raleway', sans-serif;
   letter-spacing: 1px;
   text-align: left;
+  cursor: pointer;
 }
 
 li.dropdown.last {
